# VulnHunter

./: .gitignore  .oss-sync.json  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  install.cmd  install.sh  uninstall.cmd  uninstall.sh
harness/: README.md  pyproject.toml
harness/local_harness/: README.md  clone.py  config.py  scan.py
harness/local_harness/batch/: README.md  REPO_LIST.txt  run.py  utils.py
harness/local_harness/benchmark/: README.md  analyze_misses.py  finding_history.py  (+3 more)
harness/tests/: test_analyze_misses.py  test_batch_run.py  test_batch_utils.py  test_benchmark_run.py  test_clone.py  test_config.py  test_finding_history.py  test_judge.py  test_scan.py  test_tally.py
vulnhunter-agent/: README.md  pyproject.toml  scan_manifest.schema.json  verify_disposition.schema.json
vulnhunter-agent/agent/: __init__.py  __main__.py  _body_reconstruct.py  _github.py  _github_verify.py  _llm.py  _stream_events.py  _transient.py  _url.py  audit.py  audit_extract.py  auth.py  build_settings.py  clone.py  config.example.toml  config.py  issues.py  issues_dedup.py  issues_extract.py  issues_fetch.py  issues_remote_report.py  issues_render.py  manifest.py  publish.py  repo_properties.py  runner.py  skill_version.py  token_client.py  verify.py  verify_extract.py  verify_post.py  verify_refs.py  verify_resolve.py  verify_runner.py
vulnhunter-agent/tests/: _helpers.py  conftest.py  test_app.py  test_audit.py  test_auth.py  test_body_reconstruct.py  test_build_settings.py  test_clone.py  test_config.py  test_github.py  test_github_verify.py  test_issues.py  test_issues_dedup.py  test_issues_extract.py  test_issues_fetch.py  test_issues_remote_report.py  test_issues_render.py  test_llm.py  test_main.py  test_manifest_writer.py  test_publish.py  test_repo_properties.py  test_runner.py  test_runner_helpers_extra.py  test_scan_manifest_schema.py  test_stream_events.py  test_token_client.py  test_transient.py  test_url.py  test_verify.py  test_verify_disposition_schema.py  test_verify_extract.py  test_verify_post.py  test_verify_refs.py  test_verify_resolve.py  test_verify_runner.py  verify_001_ssrf_repo_hint.py  verify_002_confused_deputy.py  verify_003_argv_injection.py  verify_004_results_dir_path_traversal.py  (+7 more)
vulnhunter-fix/: README.md  SKILL.md  collaborators.json  config.json  pyproject.toml
vulnhunter-fix/evals/: evals.json
vulnhunter-fix/prompts/: agent_fix.md  deliver.md  implement.md  parse.md  parse_issues.md  plan.md  plan_fork.md  reviewer_test.md  sweep.md  tier_judgment.md  verify.md  worker_agent_authz.md  worker_agent_common.md  worker_agent_config.md  worker_agent_crypto.md  worker_agent_injection.md  worker_agent_resource.md
vulnhunter-fix/references/: README.md  anti-merge-math.md  approved-crypto-algorithms.yaml  approved-key-sources.yaml  committed-test-naming-rule.md  cwe-fix-patterns.md  finding-schema.json  fix-completeness-rubric.md  fix_plan-schema.json  idempotency-key-rule.md  remediation-rigor.md  repo-type-adapters.md  residual-risk-rules.md  result-schema.json  severity-mask-rule.md  sweep-algorithm.md  sweep-patterns.md  test-quality-rubric.md  triage-schema.json  verification-table-rules.md
vulnhunter-fix/scripts/: _skill_bootstrap.py  anti-merge-check.py  build_graph.py  check-body-completeness.py  check-committed-test-naming.py  check-idempotency.py  check-scope.py  check-severity-mask.py  check_repo_access.sh  clone_repo.sh  cluster_score.py  compute-completeness-tier.py  crypto-trust-chain-checkers.py  detect_mode.sh  heading-sync-lint.py  issue_intake.py  language-detect.py  parse-tier-judgment.py  parse_results.py  pr-body-check.py  preflight.py  prompt-lint.py  run-gates.py  safe-phrase-sync-lint.py  setup_worktree.sh  sweep-root-causes.py  validate-finding.py  validate-fix-plan.py  validate-result.py  validate-triage.py  validate-verification.py  validate_findings_draft.py  validate_pr_body.py  worker-preamble-sync-lint.py  worktree-reset.py
vulnhunter-fix/templates/: commit_msg.md  follow_up_issue.md  issue_body.md  pr_body.md  pr_body_cluster.md  residual_risk_section.md
vulnhunter-fix/tests/: conftest.py  test_branch_naming_helpers.py  test_build_graph.py  test_check_committed_test_naming.py  test_cluster_score.py  test_contract_end_to_end.py  test_crypto_checkers.py  test_detect_mode_sh.py  test_gate2_cli_contract.py  test_gate_scripts.py  test_graph_build_bugs.py  test_graph_fixture_regression.py  test_graph_query.py  test_hand_wave_guard.py  test_issue_intake.py  test_json_schema_validators.py  test_lint_and_language.py  test_llm_review_resolution.py  test_parse_results.py  test_pr_body_check.py  test_preflight_in_place.py  test_run_gates.py  test_schema_repair_loop.py  test_setup_worktree.py  test_sweep_and_verification.py  test_validate_findings_draft.py  test_validate_pr_body.py  test_worker_preamble_sync.py  test_worktree_reset.py
vulnhunter-fix/vulnhunter_fix/: delivery.py
(+39 files in other folders)
